Created page with "* [[File:Sketcher_SelectElementsWithDoFs.svg|32px]] [[Sketcher_SelectElementsWithDoFs|Výběr nedostatečně vázaných prvků]]: Vybere prvky ve skici, které nejsou plně vázány."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -229,9 +229,7 @@
 <p><span id="Visual_Helpers"></span>
 </p>
 <h3><span id="Vizu.C3.A1ln.C3.AD_pom.C5.AFcky"></span><span class="mw-headline" id="Vizu&aacute;ln&iacute;_pom&#367;cky">Vizu&aacute;ln&iacute; pom&#367;cky</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectElementsWithDoFs.svg&amp;filetimestamp=20240101115636&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectElementsWithDoFs.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectElementsWithDoFs.html" title="Sketcher SelectElementsWithDoFs">Select Under-Constrained Elements</a>: Selects the not fully constrained elements in the sketch.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectElementsWithDoFs.svg&amp;filetimestamp=20240101115636&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectElementsWithDoFs.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectElementsWithDoFs.html" title="Sketcher SelectElementsWithDoFs">V&yacute;b&#283;r nedostate&#269;n&#283; v&aacute;zan&yacute;ch prvk&#367;</a>: Vybere prvky ve skici, kter&eacute; nejsou pln&#283; v&aacute;z&aacute;ny.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectConstraints.svg&amp;filetimestamp=20240101115612&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectConstraints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectConstraints.html" title="Sketcher SelectConstraints">Select Associated Constraints</a>: Selects the constraints associated with sketch elements.</li></ul>
 </div>
@@ -586,13 +584,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118133551
+Cached time: 20260118133729
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.438 seconds
-Real time usage: 0.685 seconds
-Preprocessor visited node count: 1445/1000000
+CPU time usage: 0.479 seconds
+Real time usage: 0.747 seconds
+Preprocessor visited node count: 1444/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -602,19 +600,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   72.316      1 -total
- 16.10%   11.640      2 Template:Docnav
- 14.88%   10.763      5 Template:MenuCommand
- 14.17%   10.246      1 Template:Sketcher_Tools_navi/cs
- 11.44%    8.276     34 Template:Version
-  9.86%    7.132      1 Template:PropertyView
-  8.21%    5.936      2 Template:Navigation_menu_2
-  7.46%    5.398      1 Template:Userdocnavi/cs
-  4.97%    3.593     14 Template:KEY
-  4.56%    3.300      1 Template:Variable
+100.00%   42.606      1 -total
+ 21.94%    9.347      1 Template:Sketcher_Tools_navi/cs
+ 21.08%    8.983      1 Template:Userdocnavi/cs
+ 13.10%    5.581      2 Template:Navigation_menu_2
+  8.34%    3.552     34 Template:Version
+  7.83%    3.336      1 Template:PropertyView
+  6.90%    2.940      2 Template:Docnav
+  4.85%    2.066      8 Template:VersionPlus
+  4.74%    2.017      6 Template:Caption
+  4.41%    1.878      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118133550 and revision id 1740561. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118133728 and revision id 1740563. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
