--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -231,9 +231,7 @@
 <h3><span id="Vizu.C3.A1ln.C3.AD_pom.C5.AFcky"></span><span class="mw-headline" id="Vizu&aacute;ln&iacute;_pom&#367;cky">Vizu&aacute;ln&iacute; pom&#367;cky</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectElementsWithDoFs.svg&amp;filetimestamp=20240101115636&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectElementsWithDoFs.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectElementsWithDoFs.html" title="Sketcher SelectElementsWithDoFs">V&yacute;b&#283;r nedostate&#269;n&#283; v&aacute;zan&yacute;ch prvk&#367;</a>: Vybere prvky ve skici, kter&eacute; nejsou pln&#283; v&aacute;z&aacute;ny.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectConstraints.svg&amp;filetimestamp=20240101115612&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectConstraints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectConstraints.html" title="Sketcher SelectConstraints">Vybrat souvisej&iacute;c&iacute; vazby</a>: Vybere vazby spojen&eacute; s prvky n&aacute;&#269;rtu.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectElementsAssociatedWithConstraints.svg&amp;filetimestamp=20240101115625&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectElementsAssociatedWithConstraints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectElementsAssociatedWithConstraints.html" title="Sketcher SelectElementsAssociatedWithConstraints">Select Associated Geometry</a>: Selects the sketch elements associated with constraints.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectElementsAssociatedWithConstraints.svg&amp;filetimestamp=20240101115625&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectElementsAssociatedWithConstraints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectElementsAssociatedWithConstraints.html" title="Sketcher SelectElementsAssociatedWithConstraints">Vybrat p&#345;idru&#382;enou geometrii</a>: Vybere prvky n&aacute;&#269;rtu spojen&eacute; s vazbami.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectRedundantConstraints.svg&amp;filetimestamp=20240101115710&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectRedundantConstraints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectRedundantConstraints.html" title="Sketcher SelectRedundantConstraints">Select Redundant Constraints</a>: Selects the redundant constraints in the sketch.</li></ul>
 </div>
@@ -582,13 +580,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118133839
+Cached time: 20260118134018
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.464 seconds
-Real time usage: 0.875 seconds
-Preprocessor visited node count: 1443/1000000
+CPU time usage: 0.514 seconds
+Real time usage: 0.742 seconds
+Preprocessor visited node count: 1442/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -598,19 +596,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   76.589      1 -total
- 23.88%   18.287      1 Template:Sketcher_Tools_navi/cs
- 16.30%   12.481      2 Template:Navigation_menu_2
- 11.53%    8.833      1 Template:Userdocnavi/cs
-  9.74%    7.463      1 Template:PropertyView
-  7.71%    5.906     34 Template:Version
-  7.40%    5.670      1 Template:TOCright
-  5.67%    4.341      6 Template:Caption
-  5.61%    4.293      2 Template:Docnav
-  5.45%    4.177     14 Template:KEY
+100.00%   52.877      1 -total
+ 28.30%   14.965      1 Template:Sketcher_Tools_navi/cs
+ 16.91%    8.942      2 Template:Navigation_menu_2
+ 12.07%    6.382      1 Template:PropertyView
+ 11.86%    6.272      1 Template:Userdocnavi/cs
+  6.65%    3.516     34 Template:Version
+  6.10%    3.224     14 Template:KEY
+  5.81%    3.074      2 Template:Docnav
+  5.38%    2.846      6 Template:Caption
+  5.25%    2.776      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118133838 and revision id 1740565. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118134017 and revision id 1740567. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
