--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -233,9 +233,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectConstraints.svg&amp;filetimestamp=20240101115612&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectConstraints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectConstraints.html" title="Sketcher SelectConstraints">Vybrat souvisej&iacute;c&iacute; vazby</a>: Vybere vazby spojen&eacute; s prvky n&aacute;&#269;rtu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectElementsAssociatedWithConstraints.svg&amp;filetimestamp=20240101115625&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectElementsAssociatedWithConstraints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectElementsAssociatedWithConstraints.html" title="Sketcher SelectElementsAssociatedWithConstraints">Vybrat p&#345;idru&#382;enou geometrii</a>: Vybere prvky n&aacute;&#269;rtu spojen&eacute; s vazbami.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectRedundantConstraints.svg&amp;filetimestamp=20240101115710&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectRedundantConstraints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectRedundantConstraints.html" title="Sketcher SelectRedundantConstraints">Vybrat nadbyte&#269;n&eacute; vazby</a>: Vybere nadbyte&#269;n&eacute; vazby ve skice.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectConflictingConstraints.svg&amp;filetimestamp=20240101115558&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectConflictingConstraints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectConflictingConstraints.html" title="Sketcher SelectConflictingConstraints">Select Conflicting Constraints</a>: Selects the conflicting constraints in the sketch.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectConflictingConstraints.svg&amp;filetimestamp=20240101115558&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectConflictingConstraints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectConflictingConstraints.html" title="Sketcher SelectConflictingConstraints">Vybrat konfliktn&iacute; vazby</a>: Vybere konfliktn&iacute; vazby ve skici.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ArcOverlay.svg&amp;filetimestamp=20240101112838&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ArcOverlay.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ArcOverlay.html" title="Sketcher ArcOverlay">Toggle Circular Helper for Arcs</a>: Shows or hides the circular helpers (underlying virtual circles) for arcs in all sketches. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 </div>
@@ -578,13 +576,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118134209
+Cached time: 20260118134359
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.530 seconds
-Real time usage: 1.585 seconds
-Preprocessor visited node count: 1441/1000000
+CPU time usage: 0.478 seconds
+Real time usage: 0.800 seconds
+Preprocessor visited node count: 1440/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -594,19 +592,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  190.664      1 -total
- 29.40%   56.052      1 Template:Sketcher_Tools_navi/cs
- 21.88%   41.717      2 Template:Navigation_menu_2
- 15.73%   30.000      1 Template:Userdocnavi/cs
-  8.23%   15.686     34 Template:Version
-  6.67%   12.708      1 Template:PropertyView
-  6.24%   11.905      2 Template:Docnav
-  5.96%   11.372      8 Template:VersionPlus
-  5.08%    9.683      6 Template:Caption
-  3.46%    6.604     14 Template:KEY
+100.00%   42.782      1 -total
+ 29.01%   12.412      1 Template:Sketcher_Tools_navi/cs
+ 15.88%    6.794      2 Template:Navigation_menu_2
+ 11.77%    5.034      1 Template:Userdocnavi/cs
+  7.75%    3.317      1 Template:PropertyView
+  7.40%    3.167      2 Template:Docnav
+  6.84%    2.925      8 Template:VersionPlus
+  6.70%    2.866     34 Template:Version
+  5.78%    2.471      6 Template:Caption
+  5.09%    2.178     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118134207 and revision id 1740569. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118134358 and revision id 1740571. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
