--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -236,9 +236,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectConflictingConstraints.svg&amp;filetimestamp=20240101115558&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectConflictingConstraints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectConflictingConstraints.html" title="Sketcher SelectConflictingConstraints">Vybrat konfliktn&iacute; vazby</a>: Vybere konfliktn&iacute; vazby ve skici.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ArcOverlay.svg&amp;filetimestamp=20240101112838&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ArcOverlay.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ArcOverlay.html" title="Sketcher ArcOverlay">P&#345;epnout kru&#382;nicov&yacute; pomocn&iacute;k pro oblouky</a>: Zobraz&iacute; nebo skryje kruhov&eacute; pomocn&eacute; prvky (podkladov&eacute; virtu&aacute;ln&iacute; kruhy) pro oblouky ve v&scaron;ech skic&aacute;ch. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span id="Sketcher_CompBSplineShowHideGeometryInformation"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_BSplinePolygon.svg&amp;filetimestamp=20240101113010&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplinePolygon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> P&#345;epnout informa&#269;n&iacute; vrstvu B-Spline:</span></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineDegree.svg&amp;filetimestamp=20240101112910&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineDegree.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineDegree.html" title="Sketcher BSplineDegree">Toggle B-Spline Degree</a>: Shows or hides the B-spline degree in all sketches.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineDegree.svg&amp;filetimestamp=20240101112910&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineDegree.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineDegree.html" title="Sketcher BSplineDegree">P&#345;epnout stupe&#328; B-spline</a>: Zobraz&iacute; nebo skryje stupe&#328; B-spline ve v&scaron;ech skic&aacute;ch.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplinePolygon.svg&amp;filetimestamp=20240101113010&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplinePolygon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplinePolygon.html" title="Sketcher BSplinePolygon">Toggle B-Spline Control Polygon</a>: Shows or hides the B-spline control polygon in all sketches.</li></ul></dd></dl>
 </div>
@@ -572,13 +570,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118134716
+Cached time: 20260118134920
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.527 seconds
-Real time usage: 1.035 seconds
-Preprocessor visited node count: 1438/1000000
+CPU time usage: 0.431 seconds
+Real time usage: 0.785 seconds
+Preprocessor visited node count: 1437/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -588,19 +586,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  203.840      1 -total
- 24.66%   50.262      1 Template:Sketcher_Tools_navi/cs
- 21.38%   43.576      1 Template:Userdocnavi/cs
- 17.52%   35.720      1 Template:PropertyView
- 12.17%   24.803      1 Template:Variable
-  8.90%   18.132      2 Template:Navigation_menu_2
-  6.90%   14.064      2 Template:Docnav
-  5.55%   11.314     14 Template:KEY
-  5.22%   10.644     34 Template:Version
-  4.69%    9.555      8 Template:VersionPlus
+100.00%   50.569      1 -total
+ 29.77%   15.054      1 Template:Sketcher_Tools_navi/cs
+ 22.72%   11.491      2 Template:Navigation_menu_2
+ 16.54%    8.363      1 Template:Userdocnavi/cs
+ 10.57%    5.343      1 Template:PropertyView
+  6.49%    3.282      1 Template:Variable
+  6.12%    3.096      6 Template:Caption
+  5.32%    2.689      2 Template:Docnav
+  5.26%    2.662     14 Template:KEY
+  5.05%    2.554     34 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118134715 and revision id 1740575. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118134919 and revision id 1740577. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
