Created page with ":* [[File:Sketcher_BSplineComb.svg|32px]] [[Sketcher_BSplineComb|Přepnout hřeben zakřivení B-spline]]: Zobrazí nebo skryje hřeben zakřivení B-spline ve všech skicách."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -238,9 +238,7 @@
 <ul><li><span id="Sketcher_CompBSplineShowHideGeometryInformation"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_BSplinePolygon.svg&amp;filetimestamp=20240101113010&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplinePolygon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> P&#345;epnout informa&#269;n&iacute; vrstvu B-Spline:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineDegree.svg&amp;filetimestamp=20240101112910&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineDegree.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineDegree.html" title="Sketcher BSplineDegree">P&#345;epnout stupe&#328; B-spline</a>: Zobraz&iacute; nebo skryje stupe&#328; B-spline ve v&scaron;ech skic&aacute;ch.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplinePolygon.svg&amp;filetimestamp=20240101113010&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplinePolygon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplinePolygon.html" title="Sketcher BSplinePolygon">P&#345;ep&iacute;n&aacute;n&iacute; ovl&aacute;dac&iacute;ho polygonu B-spline</a>: Zobraz&iacute; nebo skryje ovl&aacute;dac&iacute; polygon B-spline ve v&scaron;ech skic&aacute;ch.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineComb.svg&amp;filetimestamp=20240101112854&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineComb.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineComb.html" title="Sketcher BSplineComb">Toggle B-Spline Curvature Comb</a>: Shows or hides the B-spline curvature comb in all sketches.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineComb.svg&amp;filetimestamp=20240101112854&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineComb.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineComb.html" title="Sketcher BSplineComb">P&#345;epnout h&#345;eben zak&#345;iven&iacute; B-spline</a>: Zobraz&iacute; nebo skryje h&#345;eben zak&#345;iven&iacute; B-spline ve v&scaron;ech skic&aacute;ch.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineKnotMultiplicity.svg&amp;filetimestamp=20240101112934&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineKnotMultiplicity.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineKnotMultiplicity.html" title="Sketcher BSplineKnotMultiplicity">Toggle B-Spline Knot Multiplicity</a>: Shows or hides the B-spline knot multiplicity in all sketches.</li></ul></dd></dl>
 </div>
@@ -568,13 +566,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118135112
+Cached time: 20260118135258
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.469 seconds
-Real time usage: 0.677 seconds
-Preprocessor visited node count: 1436/1000000
+CPU time usage: 0.441 seconds
+Real time usage: 0.665 seconds
+Preprocessor visited node count: 1435/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -584,19 +582,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.250      1 -total
- 26.65%   10.725      1 Template:Sketcher_Tools_navi/cs
- 14.29%    5.752      2 Template:Navigation_menu_2
- 12.48%    5.023      1 Template:Userdocnavi/cs
- 11.46%    4.613      1 Template:PropertyView
-  6.83%    2.748     34 Template:Version
-  5.92%    2.383      2 Template:Docnav
-  5.26%    2.118      6 Template:Caption
-  5.23%    2.106      8 Template:VersionPlus
-  5.21%    2.097      1 Template:Variable
+100.00%   48.230      1 -total
+ 24.26%   11.700      1 Template:Sketcher_Tools_navi/cs
+ 14.87%    7.171      1 Template:Userdocnavi/cs
+ 12.77%    6.160      1 Template:PropertyView
+ 10.66%    5.143      2 Template:Navigation_menu_2
+  8.04%    3.878      6 Template:Caption
+  6.11%    2.948     34 Template:Version
+  5.55%    2.679      1 Template:Variable
+  5.37%    2.592     14 Template:KEY
+  5.00%    2.410      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118135111 and revision id 1740579. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118135257 and revision id 1740581. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
