--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -239,9 +239,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineDegree.svg&amp;filetimestamp=20240101112910&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineDegree.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineDegree.html" title="Sketcher BSplineDegree">P&#345;epnout stupe&#328; B-spline</a>: Zobraz&iacute; nebo skryje stupe&#328; B-spline ve v&scaron;ech skic&aacute;ch.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplinePolygon.svg&amp;filetimestamp=20240101113010&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplinePolygon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplinePolygon.html" title="Sketcher BSplinePolygon">P&#345;ep&iacute;n&aacute;n&iacute; ovl&aacute;dac&iacute;ho polygonu B-spline</a>: Zobraz&iacute; nebo skryje ovl&aacute;dac&iacute; polygon B-spline ve v&scaron;ech skic&aacute;ch.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineComb.svg&amp;filetimestamp=20240101112854&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineComb.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineComb.html" title="Sketcher BSplineComb">P&#345;epnout h&#345;eben zak&#345;iven&iacute; B-spline</a>: Zobraz&iacute; nebo skryje h&#345;eben zak&#345;iven&iacute; B-spline ve v&scaron;ech skic&aacute;ch.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineKnotMultiplicity.svg&amp;filetimestamp=20240101112934&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineKnotMultiplicity.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineKnotMultiplicity.html" title="Sketcher BSplineKnotMultiplicity">Toggle B-Spline Knot Multiplicity</a>: Shows or hides the B-spline knot multiplicity in all sketches.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineKnotMultiplicity.svg&amp;filetimestamp=20240101112934&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineKnotMultiplicity.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineKnotMultiplicity.html" title="Sketcher BSplineKnotMultiplicity">P&#345;epnout multiplicitu uzlu B-spline</a>: Zobraz&iacute; nebo skryje multiplicitu uzl&#367; B-spline ve v&scaron;ech skic&aacute;ch.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplinePoleWeight.svg&amp;filetimestamp=20240101112951&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplinePoleWeight.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplinePoleWeight.html" title="Sketcher BSplinePoleWeight">Toggle B-Spline Control Point Weight</a>: Shows or hides the B-spline control point weight in all sketches.</li></ul></dd></dl>
 </div>
@@ -566,13 +564,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118135258
+Cached time: 20260118135435
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.441 seconds
-Real time usage: 0.665 seconds
-Preprocessor visited node count: 1435/1000000
+CPU time usage: 0.494 seconds
+Real time usage: 0.703 seconds
+Preprocessor visited node count: 1434/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -582,19 +580,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.230      1 -total
- 24.26%   11.700      1 Template:Sketcher_Tools_navi/cs
- 14.87%    7.171      1 Template:Userdocnavi/cs
- 12.77%    6.160      1 Template:PropertyView
- 10.66%    5.143      2 Template:Navigation_menu_2
-  8.04%    3.878      6 Template:Caption
-  6.11%    2.948     34 Template:Version
-  5.55%    2.679      1 Template:Variable
-  5.37%    2.592     14 Template:KEY
-  5.00%    2.410      5 Template:MenuCommand
+100.00%   53.689      1 -total
+ 19.00%   10.202      1 Template:PropertyView
+ 18.36%    9.856      1 Template:Sketcher_Tools_navi/cs
+ 15.24%    8.182      1 Template:Userdocnavi/cs
+  9.58%    5.144      2 Template:Navigation_menu_2
+  7.29%    3.914      2 Template:Docnav
+  7.00%    3.759      1 Template:Variable
+  6.71%    3.602     14 Template:KEY
+  5.84%    3.134      6 Template:Caption
+  5.31%    2.849     34 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118135257 and revision id 1740581. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118135434 and revision id 1740583. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
