Created page with ":* [[File:Sketcher_BSplinePoleWeight.svg|32px]] [[Sketcher_BSplinePoleWeight|Přepnout váhu kontrolního bodu B-spline]]: Zobrazí nebo skryje váhu kontrolního bodu B-spline ve všech skicách."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -240,9 +240,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplinePolygon.svg&amp;filetimestamp=20240101113010&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplinePolygon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplinePolygon.html" title="Sketcher BSplinePolygon">P&#345;ep&iacute;n&aacute;n&iacute; ovl&aacute;dac&iacute;ho polygonu B-spline</a>: Zobraz&iacute; nebo skryje ovl&aacute;dac&iacute; polygon B-spline ve v&scaron;ech skic&aacute;ch.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineComb.svg&amp;filetimestamp=20240101112854&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineComb.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineComb.html" title="Sketcher BSplineComb">P&#345;epnout h&#345;eben zak&#345;iven&iacute; B-spline</a>: Zobraz&iacute; nebo skryje h&#345;eben zak&#345;iven&iacute; B-spline ve v&scaron;ech skic&aacute;ch.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineKnotMultiplicity.svg&amp;filetimestamp=20240101112934&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineKnotMultiplicity.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineKnotMultiplicity.html" title="Sketcher BSplineKnotMultiplicity">P&#345;epnout multiplicitu uzlu B-spline</a>: Zobraz&iacute; nebo skryje multiplicitu uzl&#367; B-spline ve v&scaron;ech skic&aacute;ch.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplinePoleWeight.svg&amp;filetimestamp=20240101112951&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplinePoleWeight.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplinePoleWeight.html" title="Sketcher BSplinePoleWeight">Toggle B-Spline Control Point Weight</a>: Shows or hides the B-spline control point weight in all sketches.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplinePoleWeight.svg&amp;filetimestamp=20240101112951&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplinePoleWeight.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplinePoleWeight.html" title="Sketcher BSplinePoleWeight">P&#345;epnout v&aacute;hu kontroln&iacute;ho bodu B-spline</a>: Zobraz&iacute; nebo skryje v&aacute;hu kontroln&iacute;ho bodu B-spline ve v&scaron;ech skic&aacute;ch.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_RestoreInternalAlignmentGeometry.svg&amp;filetimestamp=20240101171622&amp;.html" class="mw-file-description"><img src="../File/Sketcher_RestoreInternalAlignmentGeometry.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_RestoreInternalAlignmentGeometry.html" title="Sketcher RestoreInternalAlignmentGeometry">Toggle Internal Geometry</a>: Deletes the internal geometry of elements, or recreates missing internal geometry.</li></ul>
 </div>
@@ -564,13 +562,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118135435
+Cached time: 20260118135603
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.494 seconds
-Real time usage: 0.703 seconds
-Preprocessor visited node count: 1434/1000000
+CPU time usage: 0.571 seconds
+Real time usage: 0.900 seconds
+Preprocessor visited node count: 1433/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -580,19 +578,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   53.689      1 -total
- 19.00%   10.202      1 Template:PropertyView
- 18.36%    9.856      1 Template:Sketcher_Tools_navi/cs
- 15.24%    8.182      1 Template:Userdocnavi/cs
-  9.58%    5.144      2 Template:Navigation_menu_2
-  7.29%    3.914      2 Template:Docnav
-  7.00%    3.759      1 Template:Variable
-  6.71%    3.602     14 Template:KEY
-  5.84%    3.134      6 Template:Caption
-  5.31%    2.849     34 Template:Version
+100.00%   66.876      1 -total
+ 25.11%   16.795      1 Template:Sketcher_Tools_navi/cs
+ 15.90%   10.633      2 Template:Navigation_menu_2
+ 15.38%   10.286      1 Template:PropertyView
+ 11.98%    8.010      1 Template:Userdocnavi/cs
+  9.31%    6.229      1 Template:Variable
+  6.39%    4.271      2 Template:Docnav
+  6.34%    4.239      8 Template:VersionPlus
+  5.70%    3.809     34 Template:Version
+  4.68%    3.132     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118135434 and revision id 1740583. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118135602 and revision id 1740585. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
