Created page with "* [[File:Sketcher_RestoreInternalAlignmentGeometry.svg|32px]] [[Sketcher_RestoreInternalAlignmentGeometry|Přepnout vnitřní geometrii]]: Odstraní vnitřní geometrii prvků nebo znovu vytvoří chybějící vnitřní geometrii."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -241,9 +241,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineComb.svg&amp;filetimestamp=20240101112854&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineComb.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineComb.html" title="Sketcher BSplineComb">P&#345;epnout h&#345;eben zak&#345;iven&iacute; B-spline</a>: Zobraz&iacute; nebo skryje h&#345;eben zak&#345;iven&iacute; B-spline ve v&scaron;ech skic&aacute;ch.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineKnotMultiplicity.svg&amp;filetimestamp=20240101112934&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineKnotMultiplicity.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineKnotMultiplicity.html" title="Sketcher BSplineKnotMultiplicity">P&#345;epnout multiplicitu uzlu B-spline</a>: Zobraz&iacute; nebo skryje multiplicitu uzl&#367; B-spline ve v&scaron;ech skic&aacute;ch.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplinePoleWeight.svg&amp;filetimestamp=20240101112951&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplinePoleWeight.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplinePoleWeight.html" title="Sketcher BSplinePoleWeight">P&#345;epnout v&aacute;hu kontroln&iacute;ho bodu B-spline</a>: Zobraz&iacute; nebo skryje v&aacute;hu kontroln&iacute;ho bodu B-spline ve v&scaron;ech skic&aacute;ch.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_RestoreInternalAlignmentGeometry.svg&amp;filetimestamp=20240101171622&amp;.html" class="mw-file-description"><img src="../File/Sketcher_RestoreInternalAlignmentGeometry.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_RestoreInternalAlignmentGeometry.html" title="Sketcher RestoreInternalAlignmentGeometry">Toggle Internal Geometry</a>: Deletes the internal geometry of elements, or recreates missing internal geometry.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_RestoreInternalAlignmentGeometry.svg&amp;filetimestamp=20240101171622&amp;.html" class="mw-file-description"><img src="../File/Sketcher_RestoreInternalAlignmentGeometry.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_RestoreInternalAlignmentGeometry.html" title="Sketcher RestoreInternalAlignmentGeometry">P&#345;epnout vnit&#345;n&iacute; geometrii</a>: Odstran&iacute; vnit&#345;n&iacute; geometrii prvk&#367; nebo znovu vytvo&#345;&iacute; chyb&#283;j&iacute;c&iacute; vnit&#345;n&iacute; geometrii.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SwitchVirtualSpace.svg&amp;filetimestamp=20231231201841&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SwitchVirtualSpace.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SwitchVirtualSpace.html" title="Sketcher SwitchVirtualSpace">Switch Virtual Space</a>: (un)hides constraints or switches the visible virtual space.</li></ul>
 </div>
@@ -562,13 +560,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118135603
+Cached time: 20260118135732
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.571 seconds
-Real time usage: 0.900 seconds
-Preprocessor visited node count: 1433/1000000
+CPU time usage: 0.504 seconds
+Real time usage: 1.743 seconds
+Preprocessor visited node count: 1432/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -578,19 +576,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   66.876      1 -total
- 25.11%   16.795      1 Template:Sketcher_Tools_navi/cs
- 15.90%   10.633      2 Template:Navigation_menu_2
- 15.38%   10.286      1 Template:PropertyView
- 11.98%    8.010      1 Template:Userdocnavi/cs
-  9.31%    6.229      1 Template:Variable
-  6.39%    4.271      2 Template:Docnav
-  6.34%    4.239      8 Template:VersionPlus
-  5.70%    3.809     34 Template:Version
-  4.68%    3.132     14 Template:KEY
+100.00%   59.972      1 -total
+ 33.33%   19.989      1 Template:Sketcher_Tools_navi/cs
+ 16.53%    9.915      2 Template:Navigation_menu_2
+ 14.36%    8.612      1 Template:PropertyView
+ 12.80%    7.678      1 Template:Userdocnavi/cs
+  8.35%    5.010      8 Template:VersionPlus
+  6.34%    3.803     14 Template:KEY
+  4.81%    2.886      1 Template:Variable
+  4.38%    2.630      2 Template:Docnav
+  4.02%    2.411     34 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118135602 and revision id 1740585. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118135730 and revision id 1740587. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
