--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -15,7 +15,7 @@
 <li><a href="../sk/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Pracovn&yacute; st&ocirc;l N&aacute;&#269;rtn&iacute;k (8% translated)" lang="sk" dir="ltr">sloven&#269;ina</a></li>
 <li><a href="../fi/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (1% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="../sv/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (0% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench/bg (0% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#1042;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082; Sketcher (&#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088;) (89% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (0% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -242,9 +242,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineKnotMultiplicity.svg&amp;filetimestamp=20240101112934&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineKnotMultiplicity.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineKnotMultiplicity.html" title="Sketcher BSplineKnotMultiplicity">P&#345;epnout multiplicitu uzlu B-spline</a>: Zobraz&iacute; nebo skryje multiplicitu uzl&#367; B-spline ve v&scaron;ech skic&aacute;ch.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplinePoleWeight.svg&amp;filetimestamp=20240101112951&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplinePoleWeight.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplinePoleWeight.html" title="Sketcher BSplinePoleWeight">P&#345;epnout v&aacute;hu kontroln&iacute;ho bodu B-spline</a>: Zobraz&iacute; nebo skryje v&aacute;hu kontroln&iacute;ho bodu B-spline ve v&scaron;ech skic&aacute;ch.</li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_RestoreInternalAlignmentGeometry.svg&amp;filetimestamp=20240101171622&amp;.html" class="mw-file-description"><img src="../File/Sketcher_RestoreInternalAlignmentGeometry.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_RestoreInternalAlignmentGeometry.html" title="Sketcher RestoreInternalAlignmentGeometry">P&#345;epnout vnit&#345;n&iacute; geometrii</a>: Odstran&iacute; vnit&#345;n&iacute; geometrii prvk&#367; nebo znovu vytvo&#345;&iacute; chyb&#283;j&iacute;c&iacute; vnit&#345;n&iacute; geometrii.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SwitchVirtualSpace.svg&amp;filetimestamp=20231231201841&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SwitchVirtualSpace.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SwitchVirtualSpace.html" title="Sketcher SwitchVirtualSpace">Switch Virtual Space</a>: (un)hides constraints or switches the visible virtual space.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SwitchVirtualSpace.svg&amp;filetimestamp=20231231201841&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SwitchVirtualSpace.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SwitchVirtualSpace.html" title="Sketcher SwitchVirtualSpace">P&#345;epnout virtu&aacute;ln&iacute; prostor</a>: (od)skryje vazby nebo p&#345;epne viditeln&yacute; virtu&aacute;ln&iacute; prostor.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Obsolete_tools">Obsolete tools</span></h3>
 </div>
@@ -560,35 +558,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118135732
+Cached time: 20260118135858
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.504 seconds
-Real time usage: 1.743 seconds
-Preprocessor visited node count: 1432/1000000
+CPU time usage: 0.450 seconds
+Real time usage: 1.127 seconds
+Preprocessor visited node count: 1431/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4772/5000000 bytes
+Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   59.972      1 -total
- 33.33%   19.989      1 Template:Sketcher_Tools_navi/cs
- 16.53%    9.915      2 Template:Navigation_menu_2
- 14.36%    8.612      1 Template:PropertyView
- 12.80%    7.678      1 Template:Userdocnavi/cs
-  8.35%    5.010      8 Template:VersionPlus
-  6.34%    3.803     14 Template:KEY
-  4.81%    2.886      1 Template:Variable
-  4.38%    2.630      2 Template:Docnav
-  4.02%    2.411     34 Template:Version
+100.00%  172.348      1 -total
+ 15.11%   26.049      1 Template:Sketcher_Tools_navi/cs
+ 10.86%   18.714      1 Template:TOCright
+ 10.69%   18.417      5 Template:MenuCommand
+  9.47%   16.321      6 Template:Caption
+  8.56%   14.760      2 Template:Navigation_menu_2
+  8.54%   14.715      1 Template:PropertyView
+  6.58%   11.336     34 Template:Version
+  6.24%   10.752      1 Template:Userdocnavi/cs
+  5.04%    8.681      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118135730 and revision id 1740587. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118135857 and revision id 1740589. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
