Created page with "* [[File:Sketcher_Clone.svg|32px]] [[Sketcher_Clone|Klonování]]: Klonuje prvek skicáře. Není k dispozici v {{VersionPlus|1.0}}."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -246,9 +246,7 @@
 <p><span id="Obsolete_tools"></span>
 </p>
 <h3><span id="Zastaral.C3.A9_n.C3.A1stroje"></span><span class="mw-headline" id="Zastaral&eacute;_n&aacute;stroje">Zastaral&eacute; n&aacute;stroje</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Clone.svg&amp;filetimestamp=20240101115259&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Clone.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Clone.html" title="Sketcher Clone">Clone</a>: Clones a Sketcher element. Not available in <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Clone.svg&amp;filetimestamp=20240101115259&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Clone.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Clone.html" title="Sketcher Clone">Klonov&aacute;n&iacute;</a>: Klonuje prvek skic&aacute;&#345;e. Nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CloseShape.svg&amp;filetimestamp=20170323164507&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CloseShape.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CloseShape.html" title="Sketcher CloseShape">Close shape</a>: Creates a closed shape by applying coincident constraints to endpoints. Not available in <span style="font-size:small;color:green;">0.21 and above</span>.</li></ul>
 </div>
@@ -558,13 +556,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118135925
+Cached time: 20260118140100
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.443 seconds
-Real time usage: 0.753 seconds
-Preprocessor visited node count: 1431/1000000
+CPU time usage: 0.569 seconds
+Real time usage: 0.799 seconds
+Preprocessor visited node count: 1430/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -574,19 +572,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.722      1 -total
- 23.45%    8.377      1 Template:Sketcher_Tools_navi/cs
- 17.76%    6.345      2 Template:Navigation_menu_2
- 14.39%    5.142      1 Template:Userdocnavi/cs
-  7.79%    2.782      1 Template:PropertyView
-  7.34%    2.621     34 Template:Version
-  7.22%    2.580      2 Template:Docnav
-  5.97%    2.134      6 Template:Caption
-  5.34%    1.907      8 Template:VersionPlus
-  5.23%    1.868     14 Template:KEY
+100.00%   42.263      1 -total
+ 23.54%    9.947      1 Template:Sketcher_Tools_navi/cs
+ 15.76%    6.660      1 Template:Userdocnavi/cs
+ 15.73%    6.648      2 Template:Navigation_menu_2
+  8.43%    3.563      1 Template:PropertyView
+  7.51%    3.173      2 Template:Docnav
+  6.53%    2.760     34 Template:Version
+  5.86%    2.478      8 Template:VersionPlus
+  5.86%    2.476      6 Template:Caption
+  5.05%    2.136     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118135924 and revision id 1740591. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118140059 and revision id 1740593. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
