Created page with "* [[File:Sketcher_ConnectLines.svg|32px]] [[Sketcher_ConnectLines|Spojit hrany]]: Propojí prvky Sketcheru pomocí vazby shody na koncových bodech. Není k dispozici v {{VersionPlus|0.21}}."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -249,9 +249,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Clone.svg&amp;filetimestamp=20240101115259&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Clone.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Clone.html" title="Sketcher Clone">Klonov&aacute;n&iacute;</a>: Klonuje prvek skic&aacute;&#345;e. Nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CloseShape.svg&amp;filetimestamp=20170323164507&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CloseShape.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CloseShape.html" title="Sketcher CloseShape">Uzav&#345;&iacute;t tvar</a>: Vytvo&#345;&iacute; uzav&#345;en&yacute; tvar pomoc&iacute; vazby shody koncov&yacute;ch bod&#367;. Nen&iacute; k dispozici v <span style="font-size:small;color:green;">0.21 and above</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePointFillet.svg&amp;filetimestamp=20240101090747&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePointFillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePointFillet.html" title="Sketcher CreatePointFillet">Zaoblen&iacute; se zachov&aacute;n&iacute;m rohu</a>: Vytvo&#345;&iacute; zaoblen&iacute; mezi dv&#283;ma neparaleln&iacute;mi p&#345;&iacute;mkami p&#345;i zachov&aacute;n&iacute; jejich rohov&eacute;ho bodu. Nen&iacute; k dispozici v <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConnectLines.svg&amp;filetimestamp=20170323164544&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConnectLines.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConnectLines.html" title="Sketcher ConnectLines">Connect edges</a>: Connect Sketcher elements by applying coincident constraints to endpoints. Not available in <span style="font-size:small;color:green;">0.21 and above</span>.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConnectLines.svg&amp;filetimestamp=20170323164544&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConnectLines.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConnectLines.html" title="Sketcher ConnectLines">Spojit hrany</a>: Propoj&iacute; prvky Sketcheru pomoc&iacute; vazby shody na koncov&yacute;ch bodech. Nen&iacute; k dispozici v <span style="font-size:small;color:green;">0.21 and above</span>.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Copy.svg&amp;filetimestamp=20240101115313&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Copy.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Copy.html" title="Sketcher Copy">Copy</a>: Copies a Sketcher element. Not available in <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
 </div>
@@ -552,13 +550,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118140417
+Cached time: 20260118140558
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.472 seconds
-Real time usage: 0.743 seconds
-Preprocessor visited node count: 1428/1000000
+CPU time usage: 0.498 seconds
+Real time usage: 1.546 seconds
+Preprocessor visited node count: 1427/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -568,19 +566,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.870      1 -total
- 22.15%   10.604      1 Template:Sketcher_Tools_navi/cs
- 13.46%    6.444      2 Template:Navigation_menu_2
- 11.50%    5.506      1 Template:Userdocnavi/cs
-  9.18%    4.394      2 Template:Docnav
-  8.71%    4.168      8 Template:VersionPlus
-  8.41%    4.025      1 Template:PropertyView
-  7.53%    3.603     34 Template:Version
-  4.22%    2.022      1 Template:TOCright
-  4.13%    1.975      6 Template:Caption
+100.00%   98.366      1 -total
+ 35.65%   35.066      1 Template:Sketcher_Tools_navi/cs
+ 19.44%   19.122      2 Template:Navigation_menu_2
+ 17.56%   17.270      1 Template:PropertyView
+ 14.74%   14.502      1 Template:Userdocnavi/cs
+  6.76%    6.648      1 Template:Variable
+  4.88%    4.796      5 Template:MenuCommand
+  3.38%    3.326      6 Template:Caption
+  3.34%    3.283      2 Template:Docnav
+  3.24%    3.187     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118140417 and revision id 1740597. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118140556 and revision id 1740599. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
