--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -257,9 +257,7 @@
 <p><span id="Preferences"></span>
 </p>
 <h2><span id="P.C5.99edvolby"></span><span class="mw-headline" id="P&#345;edvolby">P&#345;edvolby</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Preferences.html" title="Sketcher Preferences">Preferences</a>: Preferences for the Sketcher Workbench.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Preferences.html" title="Sketcher Preferences">P&#345;edvolby</a>: P&#345;edvolby pro pracovn&iacute; plochu Sketcher.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Drawing_aids">Drawing aids</span></h2>
 </div>
@@ -542,13 +540,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118141045
+Cached time: 20260118141137
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.407 seconds
-Real time usage: 0.530 seconds
-Preprocessor visited node count: 1423/1000000
+CPU time usage: 0.496 seconds
+Real time usage: 1.103 seconds
+Preprocessor visited node count: 1422/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -558,19 +556,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.968      1 -total
- 20.81%    9.568      1 Template:PropertyView
- 20.58%    9.458      1 Template:Sketcher_Tools_navi/cs
- 12.59%    5.787      1 Template:Variable
- 11.11%    5.109      2 Template:Navigation_menu_2
-  9.84%    4.524      1 Template:Userdocnavi/cs
-  6.77%    3.113      1 Template:TOCright
-  5.60%    2.573     34 Template:Version
-  5.50%    2.527      6 Template:Caption
-  4.93%    2.268      8 Template:VersionPlus
+100.00%   85.472      1 -total
+ 16.35%   13.975      1 Template:Sketcher_Tools_navi/cs
+ 12.85%   10.981      2 Template:Docnav
+ 12.01%   10.261      1 Template:PropertyView
+ 11.69%    9.993      1 Template:Userdocnavi/cs
+  7.62%    6.510      2 Template:Navigation_menu_2
+  6.50%    5.555      6 Template:Caption
+  4.98%    4.259     34 Template:Version
+  4.94%    4.224      1 Template:Variable
+  4.43%    3.783      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118141044 and revision id 1740609. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118141136 and revision id 1740611. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
